--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,9 @@ h1 {
   background-color: rgba(255, 255, 255, .2);
 }
 
-
+.bold {
+  font-weight: 600;
+}
 
 @media screen and (min-width: 500px) {
   
@@ -84,8 +86,8 @@ h1 {
     content: '';
     background: url('./assets/faro.jpg') no-repeat center center/cover;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     top: 0;
     left: 0;
     z-index: -1;
@@ -105,3 +107,8 @@ h1 {
   }
 }
 
+@media screen and (max-width: 500px) {
+  p {
+    padding: 0 2px;
+  }
+}
