--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   box-sizing: border-box;
@@ -8,8 +8,8 @@
 }
 
 body {
-  font-family: 'Outfit', BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: "Outfit", BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -26,14 +26,14 @@ h1 {
 .app {
   width: 100%;
   height: 100vh;
-  position:relative;
-  background-color: rgba(0, 0, 0, .4);
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.4);
   color: #fff;
 }
 
 .app:before {
-  content: '';
-  background: url('./assets/atardecer.jfif') no-repeat center center/cover;
+  content: "";
+  background: url("./assets/atardecer.jfif") no-repeat center center/cover;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -62,7 +62,6 @@ h1 {
 .app .description {
   position: relative;
   transform-origin: 0 0;
-
 }
 
 .app .bottom {
@@ -73,7 +72,7 @@ h1 {
   width: 100%;
   padding: 1rem;
   border-radius: 12px;
-  background-color: rgba(255, 255, 255, .2);
+  background-color: rgba(255, 255, 255, 0.2);
   -webkit-border-radius: 12px;
   -moz-border-radius: 12px;
   -ms-border-radius: 12px;
@@ -90,11 +89,11 @@ h1 {
 }
 
 .app input {
-  padding: .7rem 1.5rem;
+  padding: 0.7rem 1.5rem;
   font-size: 1.2rem;
   border-radius: 25px;
-  border: 1px solid rgba(255, 255, 255, .8);
-  background-color: rgba(255, 255, 255, .1);
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.1);
   color: #f8f8f8;
 }
 
@@ -103,10 +102,9 @@ h1 {
 }
 
 @media screen and (min-width: 500px) {
-  
   .app:before {
-    content: '';
-    background: url('./assets/faro.jpg') no-repeat center center/cover;
+    content: "";
+    background: url("./assets/faro.jpg") no-repeat center center/cover;
     position: absolute;
     width: 100vw;
     height: 100vh;
@@ -118,8 +116,8 @@ h1 {
 
 @media screen and (min-width: 768px) {
   .app:before {
-    content: '';
-    background: url('./assets/sunset.jpg') no-repeat center center/cover;
+    content: "";
+    background: url("./assets/sunset.jpg") no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 100%;
